# dotsOCR

./: .env.example  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/dotsOCR/: __init__.py
src/dotsOCR/core/: __init__.py  batching.py  images.py  md_transform.py  prompts_legacy.py  vllm.py
src/dotsOCR/frontend/: __init__.py  app.py  config.py  controls.py  inference.py  pdf_cache.py  results.py  utils.py
